<resources>
    <string name="app_name">newApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="title">Title</string>
    <string name="vote_count">Vote Count</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="runtime">RunTime</string>
    <string name="language">Language</string>
</resources>