<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ImageView
        android:id="@+id/image_movie"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".4"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="@+id/txt_vote"
        app:layout_constraintStart_toStartOf="@+id/txt_vote"
        app:layout_constraintTop_toBottomOf="@id/image_movie" />

    <View
        android:id="@+id/view"
        android:layout_width="1dp"
        android:layout_height="@dimen/_400sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:background="@color/white"
        app:layout_constraintStart_toEndOf="@id/txt_vote"
        app:layout_constraintTop_toTopOf="@id/txt_title" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="@id/txt_vote"
        app:layout_constraintTop_toBottomOf="@id/txt_title" />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/view"
        app:layout_constraintTop_toTopOf="@id/txt_title"
        tools:text="Hallo" />

    <TextView
        android:id="@+id/txt_vote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/vote_count"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_lan" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="@id/txt_vote"
        app:layout_constraintTop_toBottomOf="@id/txt_vote" />

    <TextView
        android:id="@+id/text_vote_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:textColor="@color/white"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintStart_toEndOf="@id/view"
        app:layout_constraintTop_toTopOf="@+id/txt_vote"
        tools:text="Hallo" />

    <TextView
        android:id="@+id/txt_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/date"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="@+id/txt_vote"
        app:layout_constraintStart_toStartOf="@+id/txt_vote"
        app:layout_constraintTop_toBottomOf="@id/txt_title" />

    <TextView
        android:id="@+id/text_release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:textColor="@color/white"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintStart_toEndOf="@id/view"
        app:layout_constraintTop_toTopOf="@id/txt_date"
        tools:text="Hallo" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="@id/txt_vote"
        app:layout_constraintTop_toBottomOf="@id/txt_date" />

    <TextView
        android:id="@+id/txt_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/runtime"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintEnd_toEndOf="@+id/txt_vote"
        app:layout_constraintStart_toStartOf="@+id/txt_vote"
        app:layout_constraintTop_toBottomOf="@id/txt_date" />

    <TextView
        android:id="@+id/text_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:textColor="@color/white"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintStart_toEndOf="@id/view"
        app:layout_constraintTop_toTopOf="@id/txt_time"
        tools:text="Hallo" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="@id/txt_vote"
        app:layout_constraintTop_toBottomOf="@id/txt_time" />

    <TextView
        android:id="@+id/txt_lan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/language"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintEnd_toEndOf="@+id/txt_vote"
        app:layout_constraintStart_toStartOf="@+id/txt_vote"
        app:layout_constraintTop_toBottomOf="@id/txt_time" />

    <TextView
        android:id="@+id/text_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:textColor="@color/white"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintStart_toEndOf="@id/view"
        app:layout_constraintTop_toTopOf="@id/txt_lan"
        tools:text="Hallo" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="@id/txt_vote"
        app:layout_constraintTop_toBottomOf="@id/txt_lan" />

    <TextView
        android:id="@+id/txt_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/description"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintEnd_toEndOf="@+id/txt_vote"
        app:layout_constraintStart_toStartOf="@+id/txt_vote"
        app:layout_constraintTop_toBottomOf="@id/txt_vote" />

    <TextView
        android:id="@+id/text_desc"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintStart_toEndOf="@id/view"
        app:layout_constraintTop_toTopOf="@id/txt_desc"
        tools:text="Hallo cdxf sdddsf sdcsd sd sdfsdf werwe" />

</androidx.constraintlayout.widget.ConstraintLayout>